--- a/src/pages/safety_url/safety_url.html
+++ b/src/pages/safety_url/safety_url.html
@@ -56,7 +56,7 @@
                                     <th>源端口</th>
                                     <th>目的地址</th>
                                     <th>目的端口</th>
-                                    <th>email地址</th>
+                                    <th>Email地址</th>
                                     <th>应用</th>
                                 </tr>
                                 <tr style="cursor: pointer;" ng-repeat="item in pages" ng-click="detail(item)">
@@ -69,7 +69,6 @@
                                     <td class="td_content" ng-bind="item.host"></td>
                                 </tr>
                             </table>
-
                             <!-- angularjs分页 -->
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
