--- a/src/pages/set_net_ip/set_net_ip.html
+++ b/src/pages/set_net_ip/set_net_ip.html
@@ -11,11 +11,11 @@
                     <div class="form-group row item_form">
                         <label for="port" class="col-sm-2 control-label" style="min-width:120px">内部网络的IP段</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="net_ip" placeholder="" ng-model="net_ip">
+                            <input type="text" class="form-control item_input"  placeholder="" ng-model="net_ip">
                         </div>
                         <label for="port" class="col-sm-2 control-label" style="min-width:120px">内部网络的掩码</label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control item_input" id="net_ip" placeholder="" ng-model="net_ip_mask">
+                            <input type="text" class="form-control item_input"  placeholder="" ng-model="net_ip_mask">
                         </div>
                         <div class="col-sm-1">
                             <button class="form-control btn btn-primary" style="max-width: 80px;" ng-click="add()">添&nbsp;加</button>
