更新上传文件

--- a/src/pages/safety_dns/safety_dns.html
+++ b/src/pages/safety_dns/safety_dns.html
@@ -60,11 +60,11 @@
                                     <th>DNS服务器IP</th>
                                     <th>主机IP</th>
                                     <th>类型</th>
-                                    <th>查询</th>
+                                    <!-- <th>查询</th> -->
                                     <th>域名</th>
                                     <th> 解析IP</th>
-                                    <th> 反向IP</th>
-                                    <th> 名称</th>
+                                    <!-- <th> 反向IP</th> -->
+                                    <!-- <th> 名称</th> -->
                                     <th> TTL</th>
                                     <th> 解析结果</th>
                                 </tr>
@@ -73,11 +73,11 @@
                                     <td class="td_content" ng-bind="item.dns_ip"></td>
                                     <td class="td_content" ng-bind="item.host_ip"></td>
                                     <td class="td_content" ng-bind="item.type"></td>
-                                    <td class="td_content" ng-bind="item.query"></td>
+                                    <!-- <td class="td_content" ng-bind="item.query"></td> -->
                                     <td class="td_content" ng-bind="item.rrname"></td>
                                     <td class="td_content" ng-bind="item.rdata"></td>
-                                    <td class="td_content" ng-bind="item.reverse_addr"></td>
-                                    <td class="td_content" ng-bind="item.name"></td>
+                                    <!-- <td class="td_content" ng-bind="item.reverse_addr"></td> -->
+                                    <!-- <td class="td_content" ng-bind="item.name"></td> -->
                                     <td class="td_content" ng-bind="item.ttl"></td>
                                     <td class="td_content" ng-bind="item.des_query"></td>
                                 </tr>
