--- a/src/pages/set_rule/set_rule.html
+++ b/src/pages/set_rule/set_rule.html
@@ -36,8 +36,20 @@
                                 <!-- <span>上传成功！</span> -->
                             </form>
                         </div>
+                        <!-- <div class="progress">
+                            <div class="progress-bar progress-bar-success" role="progressbar"
+                                 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                                 style="width: 90%;">
+                                <span class="sr-only">90% 完成（成功）</span>
+                            </div>
+                        </div> -->
+                        <div ng-show="progress_if" class="progress progress-striped active" style="margin: 20px 0;border-radius: 5px;width: 300px">
+                            <div class="progress-bar progress-bar-success" id="progress" role="progressbar" 
+                               aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" >
+                            </div>
+                         </div>
                     </div>
-                  
+
                     <div class="row">
                         <div class="form-group col-md-1 col-md-offset-5">
                             <label style="width: 100%;">&nbsp;</label>
