--- a/src/pages/safety_file/safety_file.html
+++ b/src/pages/safety_file/safety_file.html
@@ -48,13 +48,13 @@
                                     <th>主机IP</th>
                                     <th>应用</th>
                                 </tr>
-                                <tr style="cursor: pointer;" ng-repeat="item in pages" ng-click="detail(item)">
-                                    <td class="td_content" ng-bind="item.time"></td>
-                                    <td class="td_content" ng-bind="item.source_ip"></td>
-                                    <td class="td_content" ng-bind="item.dns_ip"></td>
-                                    <td class="td_content" ng-bind="item.source_ip"></td>
-                                    <td class="td_content" ng-bind="item.dns_ip"></td>
-                                    <td class="td_content" ng-bind="item.host"></td>
+                                <tr style="cursor: pointer;" ng-repeat="item in pages.data.data">
+                                    <td class="td_content" ng-bind="item.timestamp"></td>
+                                    <td class="td_content" ng-bind="item.file_name"></td>
+                                    <td class="td_content" ng-bind="item.md5"></td>
+                                    <td class="td_content" ng-bind="item.source"></td>
+                                    <td class="td_content" ng-bind="item.host_ip"></td>
+                                    <td class="td_content" ng-bind="item.application"></td>
                                 </tr>
                             </table>
                             <!-- angularjs分页 -->
