--- a/src/pages/safety_dns/safety_dns.html
+++ b/src/pages/safety_dns/safety_dns.html
@@ -36,7 +36,7 @@
                         <div class="row margin download_relative">
                             <div class="form-group col-md-2" style="max-width: 150px;">
                                 <label>解析结果</label>
-                                <select class="form-control input_radius" ng-init="selectedName=0 " style="background-color: #fff;" ng-model="dns.resolves_res"
+                                <select class="form-control input_radius" style="background-color: #fff;" ng-model="dns.resolves_res"
                                     ng-options="x.num as x.type for x in resolve_result"></select>
                             </div>
                             <div class="form-group col-md-4" style="max-width: 300px;">
