--- a/src/pages/safety_size/safety_size.html
+++ b/src/pages/safety_size/safety_size.html
@@ -18,15 +18,15 @@
                             </div>
                             <div class="form-group col-md-2">
                                 <label>流量超过</label>
-                                <input type="text" class="form-control input_radius" ng-model="url.source_ip" ng-keyup="myKeyup($event)">
+                                <input type="text" class="form-control input_radius" ng-model="size.flow_size" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
                                 <label>链接时长超过</label>
-                                <input type="text" class="form-control input_radius" ng-model="url.source_port" ng-keyup="myKeyup($event)">
+                                <input type="text" class="form-control input_radius" ng-model="size.flow_duration" ng-keyup="myKeyup($event)">
                             </div>
                             <div class="form-group col-md-2">
                                 <label>主机IP</label>
-                                <input type="text" class="form-control input_radius" ng-model="url.source_port" ng-keyup="myKeyup($event)">
+                                <input type="text" class="form-control input_radius" ng-model="size.host_ip" ng-keyup="myKeyup($event)">
                             </div>
 
                             <div class="form-group col-md-1">
@@ -43,22 +43,23 @@
                             <table class="table table-hover ng-cloak">
                                 <tr>
                                     <th>时间</th>
-                                    <th>用户名</th>
                                     <th>主机IP</th>
+                                    <th>流量</th>
+                                    <th>链接时长</th>
                                     <th>应用</th>
                                 </tr>
-                                <tr style="cursor: pointer;" ng-repeat="item in pages" ng-click="detail(item)">
-                                    <td class="td_content" ng-bind="item.time"></td>
-                                    <td class="td_content" ng-bind="item.source_ip"></td>
-                                    <td class="td_content" ng-bind="item.dns_ip"></td>
-                                    <td class="td_content" ng-bind="item.host"></td>
+                                <tr style="cursor: pointer;" ng-repeat="item in pages.data.data" ng-click="detail(item)">
+                                    <td class="td_content" ng-bind="item.timestamp"></td>
+                                    <td class="td_content" ng-bind="item.host_ip"></td>
+                                    <td class="td_content" ng-bind="item.flow_bytes"></td>
+                                    <td class="td_content" ng-bind="item.flow_duration"></td>
+                                    <td class="td_content" ng-bind="item.application"></td>
                                 </tr>
                             </table>
                             <!-- angularjs分页 -->
                             <div style="border-top: 1px solid #f4f4f4;padding: 10px;">
                                 <em>共有
                                     <span ng-bind="pages.count"></span>条</em>
-                                <!-- angularjs分页 -->
                                 <ul class="pagination pagination-sm no-margin pull-right ng-cloak">
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-if="pages.pageNow>1">上一页</a>
@@ -75,6 +76,7 @@
                                     <li>
                                         <a href="javascript:void(0);" ng-click="getPage(pages.pageNow-1)" ng-bind="pages.pageNow-1" ng-if="pages.pageNow>2"></a>
                                     </li>
+                                    <li class="active">
                                         <a href="javascript:void(0);" ng-bind="pages.pageNow"></a>
                                     </li>
                                     <li>
@@ -94,6 +96,8 @@
                                     </li>
                                 </ul>
                             </div>
+
+
                         </div>
                     </div>
                 </div>
